Jack helped me fix the weird overlap on the nav bar

--- a/css-midterm/css/style.css
+++ b/css-midterm/css/style.css
@@ -12,6 +12,7 @@ nav {
   display: flex;
   justify-content: space-between;
   top: 0;
+  z-index: 10000;
 }
 
 nav ul {
